# agentic-meio

./: .env.example  .gitignore  README.md  pyproject.toml
audit-trace logs/: README.md  sustained_shift_p002_audit_trace.json
audit-trace-logs/: README.md  shift_recovery_p001_regret_guarded_audit_trace.json
configs/agent/: base.toml  live_llm.toml
configs/benchmark/: qualification_mabim.toml  qualification_orgym.toml  qualification_stockpyl.toml  serial_3_echelon.toml
configs/experiment/: first_milestone.toml  public_benchmark_eval.toml  public_benchmark_realistic_comparison.toml  real_demand_backtest.toml  real_demand_backtest_panel.toml  real_demand_backtest_panel_realistic_comparison.toml  stockpyl_serial.toml  stockpyl_serial_frozen_broad_eval.toml  stockpyl_serial_heldout_eval.toml  stockpyl_serial_live_llm.toml  stockpyl_serial_multi_eval.toml  stockpyl_serial_paper_candidate.toml  stockpyl_serial_realistic_comparison.toml  stockpyl_serial_tool_ablation.toml
scripts/: analyze_frozen_broad_eval.py  analyze_heldout_results.py  analyze_public_benchmark_repeatability.py  analyze_real_demand_repeatability.py  analyze_validation_stack.py  run_benchmark.py  run_benchmark_qualification.py  run_experiment.py  run_public_benchmark_eval.py  run_real_demand_backtest.py  run_smoke_path.py  run_stockpyl_serial.py  summarize_results.py
src/meio/: __init__.py  contracts.py
tests/unit/: test_agent_baselines.py  test_agent_telemetry.py  test_aggregate_results.py  test_benchmark_adapters.py  test_benchmark_qualification_script.py  test_benchmark_selection.py  (+36 more)
(+66 files in other folders)
